# mymux

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.gitea/workflows/: release.yml
.github/workflows/: ci.yml  release.yml
crates/mux-core/: Cargo.toml
crates/mux-core/src/: layout.rs  lib.rs  model.rs  protocol.rs
crates/mux-core/tests/: fixture.rs
crates/mymux-connect/: Cargo.toml  build.rs
crates/mymux-connect/examples/: russh_probe.rs
crates/mymux-connect/src/: agenthook.rs  bundle.rs  hosts.rs  lib.rs  main.rs  russh_tunnel.rs
crates/mymux-connect/tests/: exec_script.rs  multiplex.rs
crates/mymux-connect/tests/common/: mod.rs
crates/mymux-pkg/: Cargo.toml
crates/mymux-pkg/src/: main.rs
crates/mymux-ptyd/: Cargo.toml
crates/mymux-ptyd/src/: client.rs  grid.rs  lib.rs  main.rs  proto.rs
crates/mymuxd/: Cargo.toml  build.rs
crates/mymuxd/src/: agent.rs  fs.rs  git.rs  grid.rs  lsp.rs  main.rs  native.rs  persist.rs  pkgs.rs  proc.rs  pty.rs  state.rs  termhist.rs  tmux.rs  ws.rs
docs/: AUDIT.md  BACKLOG.md  LSP-PLAN.md  PKG-SPEC.md  audit-claude.md  audit-codex.md
fixtures/: basic.ctrl
index/: index.json
scripts/: agenthook-remote.sh  build-daemon-bundle.sh  build-release.sh  ci-build-daemon-matrix.sh  ci-publish-release.sh  install-claude-hooks.sh  install-codex-notify.sh  install-kimi-hooks.sh  install-opencode-plugin.sh  install-systemd.sh  mymux-agent-report.sh  mymux-bootstrap.sh  mymux-codex-notify.sh  mymux-connect.sh  mymux-install-remote.sh  mymux-uninstall-remote.sh  opencode-mymux-plugin.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/daemon/: bundles.json
src-tauri/src/: lib.rs  main.rs
systemd/: mymux-ptyd.service  mymuxd.service
ui/: index.html  lsp_harness.mjs  lsp_pull.mjs  lsp_sem.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: clipboard.ts  code.ts  gitgraph.ts  hostmanager.ts  imefix.ts  keymap.ts  lsp.ts  main.ts  menu.ts  metrics.ts  modkey.ts  notify.ts  pathjump.ts  pkgs.ts  prefs.ts  proc.ts  settings.ts  style.css  termhist.ts  theme.ts  viewers.ts  workspace.ts
ui/ux/: agentdump.mjs  agentflowcheck.mjs  alphacheck.py  alphashot.mjs  altcheck.mjs  argshapecheck.mjs  bartour.mjs  bgcheck.mjs  canvassmokecheck.mjs  checkbadge.mjs  clipboardcheck.mjs  codecheck.mjs  codefocuscheck.mjs  codetreecheck.mjs  codexcheck.mjs  diag.mjs  dragcheck.mjs  editcopycheck.mjs  emojicheck.mjs  emptycheck.mjs  fixtures.mjs  fontsizecheck.mjs  gitamendcheck.mjs  gitblamecheck.mjs  gitchangescheck.mjs  gitcheck.mjs  gitcomparecheck.mjs  gitconflictcheck.mjs  githistorycheck.mjs  githunkcheck.mjs  githunkheadcheck.mjs  gitjumpcheck.mjs  gitmenucheck.mjs  gitopscheck.mjs  gitpagecheck.mjs  gitrefcheck.mjs  gitsearchcheck.mjs  gitstashcheck.mjs  gitsubcheck.mjs  gitsubinitcheck.mjs  (+34 more)
