[package]
name = "mymux-connect"
description = "Client-side resilient SSH tunnel to a remote mymuxd (single auth, auto-reconnect)"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "mymux_connect"
path = "src/lib.rs"

[[bin]]
name = "mymux-connect"
path = "src/main.rs"

[dependencies]
russh = "0.62.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "signal"] }
ureq = { version = "2.10", default-features = false, features = ["tls"] }
