[package]
name = "mymux-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mymux package manager: fetch language servers (and future package kinds) into the on-disk contract mymux consumes"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
