[package]
name = "mymuxd"
description = "mymux daemon: drives tmux -CC and bridges it to the UI over WebSocket"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
mux-core = { path = "../mux-core" }
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
